--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ html {
 body {
   width:100%;
   position: relative;
+  z-index: -2;
 }
 .wrapper {
   position: absolute;
@@ -63,6 +64,9 @@ button {
   font-family: 'Rubik', sans-serif;
   font-size: 12px;
   letter-spacing: 2px;
+  cursor: pointer;
+  z-index: 5;
+  position: relative;
 }
 
 .button_orange {
@@ -75,7 +79,9 @@ button {
   border: solid 1px #F2994A;
   color: #F2994A;
 }
-
+.redirect-form {
+  display: inline-block;
+}
 /* _________________________________HEADER__________________________________ */
 
 header {
